test/libsolidity/syntaxTests/storageLayoutSpecifier/library.sol
library L layout at 42 { }
// ----
// ParserError 2314: (10-16): Expected '{' but got identifier
